# TODO(alexzhu): Enable after institutions are renamed (ir-rider-prefix)
appId: ${APP_ID}
---
- launchApp:
    clearState: true
- tapOn: "Financial Connections"
- tapOn: "Collect Bank Account"
- assertVisible:
    text: "Collect session"
- tapOn:
    text: "Collect session"
    retryTapIfNoChange: false
- tapOn:
    # Accept Link terms
    text: "Agree and continue"
- assertVisible:
    text: "Test (Non-OAuth)"
- tapOn:
    text: "Test (Non-OAuth)"

# The first chrome instance in E2E emulator, welcome page must be dismissed.
- tapOn:
    # Dismiss Chrome onboarding screen (new arch)
    text: "Use without an account"
    optional: true
- tapOn:
    # Accept Chrome terms (old arch)
    text: "Accept & continue"
    optional: true
- tapOn:
    # Don't turn on Chrome sync (old arch)
    text: "No thanks"
    optional: true

- extendedWaitUntil:
    visible: "Connect account"
    timeout: 30000
- tapOn:
    text: "Connect account"

- assertVisible:
    text: "Not now"
- tapOn:
    text: "Not now"

- assertVisible:
    text: "Back to Stripe Shop"
    optional: true
- tapOn:
    text: "Back to Stripe Shop"
    optional: true
- assertVisible:
    text: "Done"
    optional: true
- tapOn:
    text: "Done"
    optional: true
- assertVisible:
    text: "Back to Test Inc."
    optional: true
- tapOn:
    text: "Back to Test Inc."
    optional: true


- assertVisible:
    text: "Success"
- tapOn:
    text: "OK"
    optional: true
