appId: ${APP_ID}
---
- launchApp
- tapOn: "Accept a payment"
- tapOn: "Customer Sheet"
- tapOn: "Edit payment methods"
- extendedWaitUntil:
    visible: "TEST MODE"
    timeout: 150000
- tapOn:
    text: "Card number"
- inputText: "4242424242424242"
- tapOn:
    text: "MM / YY"
    optional: true
- inputText: "0125123"
- tapOn:
    text: "ZIP"
    optional: true
- tapOn:
    text: "ZIP Code"
    optional: true
- inputText: "12345"
- tapOn: "Save"
- tapOn: "Confirm"
- assertVisible:
    text: "····4242"
- tapOn: "····4242"
- tapOn: "Close"
- assertVisible:
    text: "Canceled"
- tapOn: "OK"
